--- a/files/patch-datadog.conf.example
+++ b/files/patch-datadog.conf.example
@@ -1,16 +1,16 @@
---- datadog.conf.example.orig	2016-03-06 14:21:08 UTC
+--- datadog.conf.example.orig	2016-03-31 15:25:24 UTC
 +++ datadog.conf.example
 @@ -30,9 +30,6 @@ api_key:
  # and dice per monitored app (= running Agent Check) on Datadog's backend.
  # create_dd_check_tags: no
  
--# Collect AWS EC2 custom tags as agent tags
+-# Collect AWS EC2 custom tags as agent tags (requires an IAM role associated with the instance)
 -# collect_ec2_tags: no
 -
- # Enable Agent Developer Mode
- # Agent Developer Mode collects and sends more fine-grained metrics about agent and check performance
- # developer_mode: no
-@@ -55,10 +52,6 @@ gce_updated_hostname: yes
+ # Incorporate security-groups into tags collected from AWS EC2
+ # collect_security_groups: no
+ 
+@@ -58,10 +55,6 @@ gce_updated_hostname: yes
  # Defaults to 30 seconds if no value is provided
  # recent_point_threshold: 30
  
@@ -21,7 +21,7 @@
  # Change port the Agent is listening to
  # listen_port: 17123
  
-@@ -66,7 +59,7 @@ use_mount: no
+@@ -69,7 +62,7 @@ use_mount: no
  # graphite_listen_port: 17124
  
  # Additional directory to look for Datadog checks
