--- a/files/datadog-collector.in
+++ b/files/datadog-collector.in
@@ -20,11 +20,10 @@ rcvar=datadog_collector_enable
 
 load_rc_config $name
 
-: ${datadog_collector:="NO"}
-: ${datadog_collector_config="%%ETCDIR%%/datadog.conf"}
+: ${datadog_collector_enable:="NO"}
 : ${datadog_collector_user="datadog"}
 
-command_args="-m ${datadog_user} -c "
+command_args="-m ${datadog_collector_user} -c "
 command_interpreter="%%PYTHON_CMD%%"
 
 required_files=%%ETCDIR%%/datadog.conf
@@ -42,17 +41,17 @@ info_cmd="${name}_info"
 configcheck_cmd="${name}_configcheck"
 check_cmd="${name}_check"
 
-datadog_start()
+datadog_collector_start()
 {
        	su -m ${datadog_user} -c "${command_interpreter} ${agent} start"
 }
 
-datadog_stop()
+datadog_collector_stop()
 {
        	su -m ${datadog_user} -c "${command_interpreter} ${agent} stop"
 }
 
-datadog_status()
+datadog_collector_status()
 {
        	rc_pid=`check_pidfile ${pidfile} ${command} ${command_interpreter}`
 
@@ -64,24 +63,24 @@ datadog_status()
        	fi
 }
 
-datadog_restart()
+datadog_collector_restart()
 {
         su -m ${datadog_user} -c "${command_interpreter} ${agent} restart"
 }
 
-datadog_info()
+datadog_collector_info()
 {
        	su -m ${datadog_user} -c "${command_interpreter} ${agent} info $@"
        	exit $?
 }
 
-datadog_configcheck()
+datadog_collector_configcheck()
 {
        	su -m ${datadog_user} -c "${command_interpreter} ${agent} configcheck"
        	exit $?
 }
 
-datadog_check()
+datadog_collector_check()
 {
        	su -m ${datadog_user} -c "${command_interpreter} ${agent} check $@"
        	exit $?
