--- a/files/datadog-collector.in
+++ b/files/datadog-collector.in
@@ -23,13 +23,12 @@ load_rc_config $name
 : ${datadog_collector_enable:="NO"}
 : ${datadog_collector_user="datadog"}
 
-command_args="-m ${datadog_collector_user} -c "
+command="%%PYTHON_SITELIBDIR%%/%%PORTNAME%%/agent.py"
 command_interpreter="%%PYTHON_CMD%%"
 
 required_files=%%ETCDIR%%/datadog.conf
 pidfile="%%RUNDIR%%/collector.pid"
 
-agent="%%PYTHON_SITELIBDIR%%/%%PORTNAME%%/agent.py"
 
 extra_commands="status restart info configcheck check"
 
@@ -43,47 +42,48 @@ check_cmd="${name}_check"
 
 datadog_collector_start()
 {
-       	su -m ${datadog_user} -c "${command_interpreter} ${agent} start"
+	su -m $%%USER%% -c '${command_interpreter} ${command} start'
 }
 
 datadog_collector_stop()
 {
-       	su -m ${datadog_user} -c "${command_interpreter} ${agent} stop"
+	su -m $%%USER%% -c '${command_interpreter} ${command} stop'
 }
 
 datadog_collector_status()
-{
-       	rc_pid=`check_pidfile ${pidfile} ${command} ${command_interpreter}`
+{		
+	echo "check_pidfile ${pidfile} ${command} ${command_interpreter}"
+	rc_pid=`check_pidfile ${pidfile} ${command} ${command_interpreter}`
 
-       	if [ -n "${rc_pid}" ]; then
-               	echo "${name} is running as pid ${rc_pid}."
-       	else
-               	echo "${name} is not running."
-               	return 1
-       	fi
+	if [ -n "${rc_pid}" ]; then
+		echo "${name} is running as pid ${rc_pid}."
+	else
+		echo "${name} is not running."
+		return 1
+	fi
 }
 
 datadog_collector_restart()
 {
-        su -m ${datadog_user} -c "${command_interpreter} ${agent} restart"
+	su -m $%%USER%% -c '${command_interpreter} ${agent} restart'
 }
 
 datadog_collector_info()
 {
-       	su -m ${datadog_user} -c "${command_interpreter} ${agent} info $@"
-       	exit $?
+	su -m $%%USER%% -c '${command_interpreter} ${agent} info $@'
+	exit $?
 }
 
 datadog_collector_configcheck()
 {
-       	su -m ${datadog_user} -c "${command_interpreter} ${agent} configcheck"
-       	exit $?
+	su -m $%%USER%% -c '${command_interpreter} ${agent} configcheck'
+	exit $?
 }
 
 datadog_collector_check()
 {
-       	su -m ${datadog_user} -c "${command_interpreter} ${agent} check $@"
-       	exit $?
+	su -m $%%USER%% -c '${command_interpreter} ${agent} check $@'
+	exit $?
 }
 
 run_rc_command "$@"
