--- a/files/pkg-message.in
+++ b/files/pkg-message.in
@@ -1,9 +1,9 @@
 =========================================================================
 
 The DataDog port has been installed with an example config file, located
-in %%ETCDIR%%/datadog.conf.sample.
+in %%ETCDIR%%/datadog.yaml.example.
 
-Before starting the daemon, edit %%ETCDIR%%/datadog.conf and 
+Before starting the daemon, edit %%ETCDIR%%/datadog.yaml and
 update "api_key" with DataDog API key
 avaliable https://app.datadoghq.com/account/settings#api
 
