--- a/files/datadog-agent-trace.in
+++ b/files/datadog-agent-trace.in
@@ -9,9 +9,12 @@
 # Add these lines to /etc/rc.conf.local or /etc/rc.conf
 # to enable this service:
 #
-# datadog_agent_trace_enable (bool):  Set to NO by default.
-#      																	Set it to YES to enable DataDog trace Agent.
-#
+# datadog_agent_trace_enable (bool):	Set to NO by default.
+#				Set it to YES to enable DataDog trace Agent.
+# datadog_agent_trace_user (user):	Set user to run DataDog trace Agent.
+#				Default is "%%USER%%".
+# datadog_agent_trace_conf (path):	Path to DataDog trace Agent configuration file.
+#				Default is %%ETCDIR%%/datadog.yaml
 
 . /etc/rc.subr
 
@@ -21,11 +24,11 @@ rcvar=datadog_agent_trace_enable
 load_rc_config $name
 
 : ${datadog_agent_trace_enable:="NO"}
-: ${datadog_agent_trace_user="%%USER%%"}
-: ${datadog_agent_trace_config:="%%ETCDIR%%/datadog.yaml"}
+: ${datadog_agent_trace_user:="%%USER%%"}
+: ${datadog_agent_trace_conf:="%%ETCDIR%%/datadog.yaml"}
 
-command="/opt/datadog-agent/embedded/bin/trace-agent"
-command_args="-c ${datadog_agent_trace_config}"
+command="%%PREFIX%%/bin/datadog-trace-agent"
+command_args="-c ${datadog_agent_trace_conf}"
 
 required_files=%%ETCDIR%%/datadog.yaml
 pidfile="%%RUNDIR%%/datadog-agent-trace.pid"
@@ -46,7 +49,7 @@ datadog_agent_trace_status()
 }
 
 datadog_agent_trace_start() {
-	/usr/sbin/daemon -f -p ${pidfile} -u ${datadog_agent_user} ${command}
+	/usr/sbin/daemon -f -p ${pidfile} -u ${datadog_agent_user} ${command} ${command_args}
 	return $?
 }
 
