--- a/files/datadog-agent.in
+++ b/files/datadog-agent.in
@@ -6,12 +6,15 @@
 # REQUIRE: LOGIN
 # KEYWORD: shutdown
 #
-# Add these lines to /etc/rc.conf.local or /etc/rc.conf
+# Add the following lines to /etc/rc.conf.local or /etc/rc.conf
 # to enable this service:
 #
-# datadog_agent_enable (bool):    	Set to NO by default.
-#      															Set it to YES to enable DataDog Agent.
-#
+# datadog_agent_enable (bool):	Set to NO by default.
+#				Set it to YES to enable DataDog Agent.
+# datadog_agent_user (user):	Set user to run DataDog Agent.
+#				Default is "%%USER%%".
+# datadog_agent_conf (path):	Path to DataDog Agent configuration file.
+#				Default is %%ETCDIR%%/datadog.yaml
 
 . /etc/rc.subr
 
@@ -21,11 +24,11 @@ rcvar=datadog_agent_enable
 load_rc_config $name
 
 : ${datadog_agent_enable:="NO"}
-: ${datadog_agent_user="%%USER%%"}
-: ${datadog_agent_config:="%%ETCDIR%%/datadog.yaml"}
+: ${datadog_agent_user:="%%USER%%"}
+: ${datadog_agent_conf:="%%ETCDIR%%/datadog.yaml"}
 
-command="/opt/datadog-agent/bin/agent/agent"
-command_args="-c ${datadog_agent_config}"
+command="%%PREFIX%%/bin/datadog-agent"
+command_args="-c ${datadog_agent_conf}"
 
 required_files=%%ETCDIR%%/datadog.yaml
 pidfile="%%RUNDIR%%/datadog-agent.pid"
