--- a/files/datadog-process-agent.in
+++ b/files/datadog-process-agent.in
@@ -2,33 +2,33 @@
 
 # $FreeBSD$
 #
-# PROVIDE: datadog_agent_process
+# PROVIDE: datadog_process_agent
 # REQUIRE: LOGIN
 # KEYWORD: shutdown
 #
 # Add the following lines to /etc/rc.conf.local or /etc/rc.conf
 # to enable this service:
 #
-# datadog_agent_process_enable (bool):  Set to NO by default.
+# datadog_process_agent_enable (bool):  Set to NO by default.
 #				Set it to YES to enable Datadog Process Agent.
-# datadog_agent_process_user (user):	Set user to run Datadog Process Agent.
+# datadog_process_agent_user (user):	Set user to run Datadog Process Agent.
 #				Default is "%%USER%%".
-# datadog_agent_process_conf (path):	Path to Datadog Process Agent configuration file.
+# datadog_process_agent_conf (path):	Path to Datadog Process Agent configuration file.
 #				Default is %%ETCDIR%%/datadog.yaml
 
 . /etc/rc.subr
 
-name=datadog_agent_process
-rcvar=datadog_agent_process_enable
+name=datadog_process_agent
+rcvar=datadog_process_agent_enable
 
 load_rc_config $name
 
-: ${datadog_agent_process_enable:="NO"}
-: ${datadog_agent_process_user="%%USER%%"}
-: ${datadog_agent_process_conf:="%%ETCDIR%%/datadog.yaml"}
+: ${datadog_process_agent_enable:="NO"}
+: ${datadog_process_agent_user="%%USER%%"}
+: ${datadog_process_agent_conf:="%%ETCDIR%%/datadog.yaml"}
 
 command="%%DATADOG_PREFIX%%/process-agent"
-command_args="-config ${datadog_agent_process_conf}"
+command_args="-config ${datadog_process_agent_conf}"
 
 required_files=%%ETCDIR%%/datadog.yaml
 pidfile="%%RUNDIR%%/datadog-agent-process.pid"
@@ -37,7 +37,7 @@ start_cmd="${name}_start start $@"
 stop_cmd="${name}_stop stop $@"
 status_cmd="${name}_status"
 
-datadog_agent_process_status()
+datadog_process_agent_status()
 {
 	rc_pid=`check_pidfile ${pidfile} ${command}`
 	if [ -n "${rc_pid}" ]; then
@@ -48,12 +48,12 @@ datadog_agent_process_status()
 	fi
 }
 
-datadog_agent_process_start() {
-	/usr/sbin/daemon -f -p ${pidfile} -u ${datadog_agent_process_user} ${command} ${command_args}
+datadog_process_agent_start() {
+	/usr/sbin/daemon -f -p ${pidfile} -u ${datadog_process_agent_user} ${command} ${command_args}
 	return $?
 }
 
-datadog_agent_process_stop() {
+datadog_process_agent_stop() {
 	rc_pid=`check_pidfile ${pidfile} ${command}`
 	if [ -n "${rc_pid}" ]; then
 		kill ${rc_pid}
