--- a/files/datadog-trace-agent.in
+++ b/files/datadog-trace-agent.in
@@ -1,6 +1,6 @@
 #!/bin/sh
 
-# $FreeBSD$
+# $FreeBSD: head/sysutils/datadog-agent/files/datadog-trace-agent.in 554912 2020-11-11 20:25:33Z dch $
 #
 # PROVIDE: datadog_trace_agent
 # REQUIRE: LOGIN
